# thecalculator

./: .contemporary.json  .gitignore  .parlance.json  CMakeLists.txt  README.md  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  calc.js  calcbutton.cpp  calcbutton.h  commandRegistration.js  evaluationengine.cpp  evaluationengine.h  evaluationengineheaders.h  expression.cpp  expression.h  expressionlineedit.cpp  expressionlineedit.h  historydelegate.cpp  historydelegate.h  icons.qrc  index.js  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node-appdmg-config.json  package-lock.json  package.json  server.js  theCalculator.pro  thecalculator.desktop  travis.sh
.github/workflows/: flatpak.yml
application/: CMakeLists.txt  application.pro  calcbutton.cpp  calcbutton.h  com.vicr123.thecalculator.desktop  com.vicr123.thecalculator.metainfo.xml  com.vicr123.thecalculator_blueprint.desktop  com.vicr123.thecalculator_blueprint.metainfo.xml  evaluationengine.cpp  evaluationengine.h  evaluationengineheaders.h  expression.cpp  expression.h  expressionlineedit.cpp  historydelegate.cpp  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
application/calculator/: calculatorwidget.cpp  calculatorwidget.h  calculatorwidget.ui
application/customs/: branchbox.ui  conditionbox.cpp  conditionbox.ui  overloadbox.h
application/functions/: functionwidget.cpp
application/graph/: graphfunction.cpp  graphfunction.h  graphview.cpp  graphwidget.cpp  graphwidget.ui  renderdialog.cpp
application/parser/: calc.l  calc.y
application/parts/calculator/: calculatorwidget.cpp  logbasepopover.cpp  logbasepopover.h  logbasepopover.ui  nthrootpopover.cpp
application/parts/functions/: functionwidget.cpp  functionwidget.ui
application/parts/graph/: addfunctiondialog.cpp  addfunctiondialog.h  addfunctiondialog.ui  graphfunction.cpp  graphview.cpp  graphview.h  graphwidget.h
application/parts/stats/: statwidget.ui
application/stats/: statwidget.cpp  statwidget.h
application/translations/: de_DE.qm  de_DE.ts  en_GB.ts  en_US.ts  id_ID.qm  id_ID.ts  it_IT.qm  it_IT.ts  nl_NL.qm  nl_NL.ts  pt_BR.qm  pt_BR.ts  sv_SE.ts  tr_TR.qm  tr_TR.ts  vi_VN.qm  vi_VN.ts
application/translations/desktop/com.vicr123.thecalculator/: en.json
application/translations/desktop/com.vicr123.thecalculator_blueprint/: en.json
customs/: branchbox.cpp  branchbox.h  branchbox.ui  conditionbox.cpp  conditionbox.h  conditionbox.ui  overloadbox.cpp  overloadbox.h  overloadbox.ui
libthecalculator/: CMakeLists.txt  evaluationengine.cpp  evaluationengine.h  evaluationengineheaders.h  idouble.cpp  idouble.h  libthecalculatorConfig.cmake.in  libthecalculator_global.h
libthecalculator/evaluation/: baseevaluationengine.cpp  baseevaluationengine.h
libthecalculator/evaluation/bisonflex/: bisonflexevaluationengine.cpp  bisonflexevaluationengine.h
libthecalculator/parser/: calc.l  calc.y
libthecalculator/translations/: en_US.ts
parser/: calc.l  calc.y
parts/calculator/: calculatorwidget.cpp  calculatorwidget.h  calculatorwidget.ui  logbasepopover.cpp  logbasepopover.h  logbasepopover.ui  nthrootpopover.cpp  nthrootpopover.h  nthrootpopover.ui
parts/functions/: functionwidget.h  functionwidget.ui
parts/graph/: addfunctiondialog.cpp  addfunctiondialog.h  addfunctiondialog.ui  graphfunction.cpp  graphfunction.h  graphview.cpp  graphview.h  graphwidget.cpp  graphwidget.h  graphwidget.ui  renderdialog.h  renderdialog.ui
parts/stats/: statwidget.cpp  statwidget.ui
translations/: aa_ET.ts  ab_GE.ts  am_ET.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  as_IN.ts  au_AU.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  cr_CA.ts  cy_GB.ts  da_DK.ts  de_AT.ts  de_DE.qm  de_DE.ts  el_GR.ts  en_AU.ts  en_CA.ts  en_GB.qm  en_GB.ts  en_NZ.ts  en_US.ts  es_AR.ts  es_BO.ts  es_CL.ts  es_CO.ts  es_ES.ts  es_NI.ts  es_PA.ts  es_SV.ts  (+69 more)
